objects/HCM_Employee__c.object
<CustomObject>
    <description>HCM Employee record table.  This table will be updated with data from the Global Foundries Employee management system.    All new Salesforce employee user records will be created through this interface.</description>
    <fields>
        <fullName>Conferencing_ITAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conferencing (ITAR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <label>Department Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DropBox_ITAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DropBox (ITAR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DropBox_Non_ITAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DropBox (Non-ITAR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The is the Global foundries employee ID used for SSO</description>
        <externalId>true</externalId>
        <label>Employee ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITARCertified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only in use for ITAR Certification</inlineHelpText>
        <label>ITAR Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITAR_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Load data from downstream to say if a user is ITAR Certified or not</description>
        <label>HCM ITAR Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITAR_EndDate__c</fullName>
        <inlineHelpText>Only in Use of ITAR Apps</inlineHelpText>
        <label>ITAR End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ITAR_End_Date_Formula__c</fullName>
        <formula>IF(  ITAR_EndDate__c  &gt;TODAY(), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ITAR End Date Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITAR_End_Date__c</fullName>
        <description>To load the ITAR Certificate End Date,</description>
        <label>HCM ITAR End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Red_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Red User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Description__c</fullName>
        <label>Location Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Not clear if the Login ID is the same as the Employee ID</description>
        <label>Login ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Mask_Viewer_ITAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Mask Viewer (ITAR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Mask_Viewer_Non_ITAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Mask Viewer (Non-ITAR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supervisor_Firstname__c</fullName>
        <formula>Supervisor__r.First_Name__c</formula>
        <label>Supervisor Firstname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_ID__c</fullName>
        <description>The Employee ID of the supervisor.</description>
        <label>Supervisor ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Lastname__c</fullName>
        <formula>Supervisor__r.Last_Name__c</formula>
        <label>Supervisor Lastname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Login_Id__c</fullName>
        <formula>Supervisor__r.Login_ID__c</formula>
        <label>Supervisor Login Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Phone__c</fullName>
        <formula>Supervisor__r.Phone_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supervisor Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the HCM Supervisor record.</description>
        <label>Supervisor</label>
        <referenceTo>HCM_Employee__c</referenceTo>
        <relationshipLabel>HCM Employees</relationshipLabel>
        <relationshipName>HCM_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TeamRoom_ITAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TeamRoom (ITAR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HCM_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Location__c</fullName>
        <label>Work Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>HCM Employee</label>
    <listViews>
        <fullName>All_Active_Employees</fullName>
        <columns>NAME</columns>
        <columns>Employee_ID__c</columns>
        <columns>Status__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Login_ID__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Work_Location__c</columns>
        <columns>Department_Name__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Preferred_Name__c</columns>
        <columns>Supervisor__c</columns>
        <columns>Supervisor_ID__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All - Active Employees</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_SFDC_Employees</fullName>
        <columns>NAME</columns>
        <columns>Employee_ID__c</columns>
        <columns>Status__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Login_ID__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Work_Location__c</columns>
        <columns>Department_Name__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Preferred_Name__c</columns>
        <columns>Supervisor__c</columns>
        <columns>Supervisor_ID__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All - Active SFDC Employees</label>
    </listViews>
    <listViews>
        <fullName>All_Inactive_Employees</fullName>
        <columns>NAME</columns>
        <columns>Employee_ID__c</columns>
        <columns>Status__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Login_ID__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Work_Location__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Preferred_Name__c</columns>
        <columns>Supervisor__c</columns>
        <columns>Supervisor_ID__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>All - Inactive Employees</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_No_Status</fullName>
        <columns>NAME</columns>
        <columns>Employee_ID__c</columns>
        <columns>Status__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Login_ID__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Email_Address__c</columns>
        <columns>Work_Location__c</columns>
        <columns>Department_Name__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Preferred_Name__c</columns>
        <columns>Supervisor__c</columns>
        <columns>Supervisor_ID__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Login_ID__c</field>
            <operation>equals</operation>
            <value>E16849</value>
        </filters>
        <label>All - No Status</label>
    </listViews>
    <listViews>
        <fullName>HCM_Employees_with_Supervisor</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Login_ID__c</columns>
        <columns>Email_Address__c</columns>
        <columns>User__c</columns>
        <columns>Supervisor__c</columns>
        <columns>Employee_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Supervisor__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Job_Title__c</field>
            <operation>notContain</operation>
            <value>CEO</value>
        </filters>
        <label>HCM Employees w/o Supervisor</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Employee</fullName>
        <columns>Employee_ID__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Email_Address__c</columns>
        <columns>Job_Title__c</columns>
        <columns>Login_ID__c</columns>
        <columns>Preferred_Name__c</columns>
        <columns>Department_Name__c</columns>
        <columns>Supervisor__c</columns>
        <columns>Supervisor_ID__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Email_Address__c</field>
            <operation>notEqual</operation>
            <value>electronic_leave@globalfoundries.com</value>
        </filters>
        <label>Inactive Employee Modified last 7 days</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Employee</fullName>
        <columns>Employee_ID__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Email_Address__c</columns>
        <columns>Job_Title__c</columns>
        <columns>User__c</columns>
        <columns>Supervisor__c</columns>
        <columns>Supervisor_Firstname__c</columns>
        <columns>Supervisor_Lastname__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>New Employee Added last 7 days</label>
    </listViews>
    <nameField>
        <displayFormat>HCM-{000000}</displayFormat>
        <label>HCM Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HCM Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Certified_Check_ValidEndDate</fullName>
        <active>true</active>
        <description>Certified check box will be successfully check for valid end days</description>
        <errorConditionFormula>AND(OR(ISBLANK(ITAR_EndDate__c), ITAR_EndDate__c &lt; TODAY()),  ITARCertified__c = TRUE)</errorConditionFormula>
        <errorDisplayField>ITARCertified__c</errorDisplayField>
        <errorMessage>Please Enter a valid End Date, to check ITAR Certified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_Future_Value</fullName>
        <active>true</active>
        <description>End Date should be either today or Future Days.</description>
        <errorConditionFormula>ITAR_EndDate__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>ITAR_EndDate__c</errorDisplayField>
        <errorMessage>Please enter Current or Future Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ITAR_Access_To_Only_Internal_Users</fullName>
        <active>true</active>
        <description>ITAR Access to only Internal Users</description>
        <errorConditionFormula>AND(OR(DropBox_ITAR__c= TRUE, DropBox_Non_ITAR__c = TRUE , Conferencing_ITAR__c= TRUE , TeamRoom_ITAR__c= TRUE ,Remote_Mask_Viewer_ITAR__c= TRUE , Remote_Mask_Viewer_Non_ITAR__c = TRUE , ITARCertified__c = TRUE , NOT(ISBLANK(ITAR_EndDate__c ))), NOT(ISBLANK(User__r.ContactId)))</errorConditionFormula>
        <errorMessage>ITAR specific fields usage is valid only to Internal USER.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_End_Date_for_Certified_Users</fullName>
        <active>true</active>
        <description>End Date is mandatory if ITAR Certified is checked</description>
        <errorConditionFormula>AND(
NOT(ITARCertified__c),
NOT(ISNULL(ITAR_EndDate__c)))</errorConditionFormula>
        <errorDisplayField>ITAR_EndDate__c</errorDisplayField>
        <errorMessage>Please check ITAR Certified in order to fill ITAR End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restricted_Fields_Check</fullName>
        <active>true</active>
        <description>Restricted Fields can be checked only when ITAR certified check box is filled.</description>
        <errorConditionFormula>AND(OR(DropBox_ITAR__c= TRUE, Conferencing_ITAR__c= TRUE , TeamRoom_ITAR__c= TRUE ,Remote_Mask_Viewer_ITAR__c= TRUE) , ITARCertified__c = False)</errorConditionFormula>
        <errorMessage>ITAR Certified Check box should be checked for granting access to Restricted Apps</errorMessage>
    </validationRules>
</CustomObject>